Add site is in building

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>hello world</h1>
+		<h1>Hello There!</h1>
+		<h1>This site is in process of building</h1>
 	</body>
 </html>
