fixed the image path

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						class="relative w-64 h-64 mx-auto rounded-full border-4 border-white/20 shadow-floating overflow-hidden bg-gradient-to-br from-slate-900 to-slate-700"
 					>
 						<img
-							src="Aakash.jpg"
+							src="./Aakash.JPG"
 							alt="Portrait of Aakash Kulkarni"
 							class="w-full h-full object-cover object-center"
 						/>
@@ -799,7 +799,7 @@
 		<footer
 			class="relative z-10 border-t border-white/10 py-6 text-center text-sm text-slate-400"
 		>
-              Last Upadted: 3rd January 2026
+			Last Upadted: 3rd January 2026
 		</footer>
 		<script>
 			const links = document.querySelectorAll(".nav-link");
